fix bugs scroll animation mobile, header mobile padding, slider main conv mobile

--- a/resources/styles/blocks/_advantages.sass
+++ b/resources/styles/blocks/_advantages.sass
@@ -1,5 +1,6 @@
 .advantages
     margin-bottom: 95px
+    overflow: hidden
 
     &__wrapper
         min-height: 970px
