--- a/resources/styles/blocks/_dropdown-menu.sass
+++ b/resources/styles/blocks/_dropdown-menu.sass
@@ -116,7 +116,7 @@ body.openMenu
         min-height: 100%
         &__wrapper
             padding: 20px
-            padding-top: 130px
+            padding-top: 160px
         &__list
             li
                 &:not(:last-of-type)
